# mario-party-tracker

./: package.json
client/: README.md  package-lock.json  package.json  shell.nix  vite.config.ts
client/src/: App.vue
client/src/assets/: main.css
client/src/components/: MarioPartyEightInput.vue  MarioPartyFiveInput.vue  MarioPartyFourInput.vue  MarioPartyInput.vue  MarioPartyIslandTourInput.vue  MarioPartyNineInput.vue  MarioPartyOneInput.vue  MarioPartySevenInput.vue  MarioPartySixInput.vue  MarioPartySuperstarsInput.vue  MarioPartyTenInput.vue  MarioPartyThreeInput.vue  MarioPartyTop100Input.vue  MarioPartyTwoInput.vue  SuperMarioPartyInput.vue
client/src/router/: index.ts
client/src/views/: InputView.vue  LoginView.vue  SignupView.vue
server/: Cargo.toml  shell.nix
server/listfields-derive/: Cargo.toml
server/listfields-derive/src/: lib.rs
server/migrations/: 1717739590_create_user_table.sql  1719009257_create_game_tables.sql
server/src/: listfields.rs  main.rs  requests.rs  responses.rs  routes.rs
src/assets/: main.css
src/components/: PlayerStatsInput.vue
src/router/: index.ts
src/views/: InputView.vue
