[package]
name = "mario-party-tracker-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
axum-login = "0.15.1"
clap = {version="4.5.4", features=["derive"]}
password-auth = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "chrono", "postgres" ] }
thiserror = "1.0.61"
tokio = {version="1.38.0",  features = ["full"]}
tower = "0.4.13"
tower-http = {version="0.5.2", features=["cors", "fs"]}
